--- a/apps/tool/templates/tool/base_tool.html
+++ b/apps/tool/templates/tool/base_tool.html
@@ -19,3 +19,7 @@
 {% include 'blog/tags/footer.html' %}
 {% endblock %}
 
+{% block end_file %}
+<script src="{% static 'tool/js/tool.js'%}?v=20180105.21"></script>
+{% block end_f %}{% endblock %}
+{% endblock %}
