--- a/apps/tool/templates/tool/bd_push.html
+++ b/apps/tool/templates/tool/bd_push.html
@@ -156,8 +156,7 @@
 </div>
 {% endblock %}
 
-{% block end_file %}
-<script src="{% static 'tool/js/tool.js'%}?v=20180105.2"></script>
+{% block end_f %}
 <script>
 $('#start-push').click(function() {
 	push_spider("{{ csrf_token }}", "{% url 'tool:baidu_push_api' %}");
