--- a/templates/test_html.html
+++ b/templates/test_html.html
@@ -12,6 +12,32 @@
     <link href="{% static 'blog/css/base.css' %}" rel="stylesheet">
 
     <title>Hello, world!</title>
+    <style>
+        #emoji-btns,
+        .editor-btns .btn {
+            background: #fff;
+        }
+        #emoji-btns:hover,
+        .editor-btns .btn:hover {
+            background: #f4f4f4;
+        }
+
+        #emoji-btns:focus,
+        .editor-btns .btn:focus {
+            outline:0;
+            box-shadow:none;
+        }
+        #emoji-btns:active,
+        .editor-btns .btn:active {
+            box-shadow:inset 0 3px 5px rgba(0,0,0,.125)
+        }
+        .editor-btns img {
+            width: 24px;
+            height: 24px;
+        }
+
+
+    </style>
 </head>
 <body>
 <div class="container">
@@ -22,41 +48,162 @@
                 This is a primary alert—check it out!
                 <p>{{ site_description }}</p>
             </div>
-            <div class="summary_list">
-                <div class="media mb-3 p-3">
-                    <img class="align-self-center mr-3 w-25" src="http://cdn.stopfollow.com/014/Python.jpg"
-                         alt="Generic placeholder image">
-                    <div class="media-body">
-                        <div class="small text-muted mb-2">
-                            <span><img class="rounded-circle mr-1 avatar"
-                                       src="http://www.stopfollow.com/media/avatar/timg_wX5F4n5.jpg" alt="用户名称">Hopetree</span>
-                            <span class="ml-2"><i class="fa fa-calendar-times-o"></i> 1 月，1 周 之前</span>
+            <div class="card border-0 rounded-0" id="editor-block">
+                <div class="card-header border-0 bg-white py-2">
+                    <div class="editor-btns">
+                        <button class="btn py-1 px-2"><i class="fa fa-bold fa-fw"></i></button>
+                        <button class="btn py-1 px-2"><i class="fa fa-italic fa-fw"></i></button>
+                        <button class="btn py-1 px-2"><i class="fa fa-quote-left fa-fw"></i></button>
+                        <button class="btn py-1 px-2"><i class="fa fa-table fa-fw"></i></button>
+                        <button class="btn py-1 px-2"><i class="fa fa-link fa-fw"></i></button>
+                        <button class="btn py-1 px-2"><i class="fa fa-image fa-fw"></i></button>
+                        <button class="btn py-1 px-2"><i class="fa fa-code fa-fw"></i></button>
+                    </div>
+                </div>
+                <div class="card-body py-2">
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+                </div>
+                <div class="card-footer border-0 bg-white py-2">
+                    <button type="button" class="btn btn-info float-right">提交评论</button>
+                    <button id="emoji-btns" type="button" class="btn py-1 px-2"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fa fa-smile-o fa-2x"></i>
+                    </button>
+                    <div class="dropdown-menu" id='emoji-list' aria-labelledby="emoji-btns">
+                        <div class="editor-btns px-2" id="emojis">
+                            <button class="btn p-1"><img
+                                    src="{% static 'blog/emoji/stuck_out_tongue_winking_eye.png' %}"
+                                    title="stuck_out_tongue_winking_eye" alt="emoji-stuck_out_tongue_winking_eye"
+                                    data-emoji=":stuck_out_tongue_winking_eye:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/sunglasses.png' %}"
+                                                         title="sunglasses" alt="emoji-sunglasses"
+                                                         data-emoji=":sunglasses:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/sweat.png' %}" title="sweat"
+                                                         alt="emoji-sweat" data-emoji=":sweat:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/sweat_smile.png' %}"
+                                                         title="sweat_smile" alt="emoji-sweat_smile"
+                                                         data-emoji=":sweat_smile:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/unamused.png' %}" title="unamused"
+                                                         alt="emoji-unamused" data-emoji=":unamused:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/v.png' %}" title="v" alt="emoji-v"
+                                                         data-emoji=":v:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/worried.png' %}" title="worried"
+                                                         alt="emoji-worried" data-emoji=":worried:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/yum.png' %}" title="yum"
+                                                         alt="emoji-yum" data-emoji=":yum:"></button>
                         </div>
-                        <h5 class="mt-0 font-weight-bold"><a href="#">第一步使用 bootstrap4 建立前端网页</a></h5>
-                        <p class="d-none d-sm-block mb-2">淘宝关键词搜索是淘宝/天猫运营自然流量主要的来源，也是进行 SEO
-                            优化的主要关注点，选择合适的宝贝标题关键词可以有效的提升宝贝的曝光几率，而选择词的方式又很多，本篇文章就来介绍一种使用爬虫手段来更加实际的选择关键词的方法。
-                        </p>
-                        <div class="small text-muted mb-0">
-                            <span><a href="#" title="查看当前分类下更多文章"><i
-                                    class="fa fa-th-list mr-1"></i>Python web开发</a></span>
-                            <span><i class="fa fa-eye ml-2 mr-1"></i>33</span>
-                            <span><a href="#comment-main-block" title="查看文章评论"><i
-                                    class="fa fa-commenting ml-2 mr-1"></i>34</a></span>
+                        <div class="editor-btns px-2" id="emojis">
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/sleepy.png' %}" title="sleepy"
+                                                         alt="emoji-sleepy" data-emoji=":sleepy:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/smile.png' %}" title="smile"
+                                                         alt="emoji-smile" data-emoji=":smile:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/smiley.png' %}" title="smiley"
+                                                         alt="emoji-smiley" data-emoji=":smiley:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/smirk.png' %}" title="smirk"
+                                                         alt="emoji-smirk" data-emoji=":smirk:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/sob.png' %}" title="sob"
+                                                         alt="emoji-sob" data-emoji=":sob:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/sparkling_heart.png' %}"
+                                                         title="sparkling_heart" alt="emoji-sparkling_heart"
+                                                         data-emoji=":sparkling_heart:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/stuck_out_tongue.png' %}"
+                                                         title="stuck_out_tongue" alt="emoji-stuck_out_tongue"
+                                                         data-emoji=":stuck_out_tongue:"></button>
+                            <button class="btn p-1"><img
+                                    src="{% static 'blog/emoji/stuck_out_tongue_closed_eyes.png' %}"
+                                    title="stuck_out_tongue_closed_eyes" alt="emoji-stuck_out_tongue_closed_eyes"
+                                    data-emoji=":stuck_out_tongue_closed_eyes:"></button>
+                        </div>
+                        <div class="editor-btns px-2" id="emojis">
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/kissing_heart.png' %}"
+                                                         title="kissing_heart" alt="emoji-kissing_heart"
+                                                         data-emoji=":kissing_heart:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/mask.png' %}" title="mask"
+                                                         alt="emoji-mask" data-emoji=":mask:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/no_mouth.png' %}" title="no_mouth"
+                                                         alt="emoji-no_mouth" data-emoji=":no_mouth:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/pensive.png' %}" title="pensive"
+                                                         alt="emoji-pensive" data-emoji=":pensive:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/persevere.png' %}" title="persevere"
+                                                         alt="emoji-persevere" data-emoji=":persevere:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/pray.png' %}" title="pray"
+                                                         alt="emoji-pray" data-emoji=":pray:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/relieved.png' %}" title="relieved"
+                                                         alt="emoji-relieved" data-emoji=":relieved:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/scream.png' %}" title="scream"
+                                                         alt="emoji-scream" data-emoji=":scream:"></button>
+                        </div>
+                        <div class="editor-btns px-2" id="emojis">
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/grin.png' %}" title="grin"
+                                                         alt="emoji-grin" data-emoji=":grin:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/heart.png' %}" title="heart"
+                                                         alt="emoji-heart" data-emoji=":heart:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/heartbeat.png' %}" title="heartbeat"
+                                                         alt="emoji-heartbeat" data-emoji=":heartbeat:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/heart_eyes.png' %}"
+                                                         title="heart_eyes" alt="emoji-heart_eyes"
+                                                         data-emoji=":heart_eyes:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/hushed.png' %}" title="hushed"
+                                                         alt="emoji-hushed" data-emoji=":hushed:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/innocent.png' %}" title="innocent"
+                                                         alt="emoji-innocent" data-emoji=":innocent:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/joy.png' %}" title="joy"
+                                                         alt="emoji-joy" data-emoji=":joy:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/kissing_closed_eyes.png' %}"
+                                                         title="kissing_closed_eyes" alt="emoji-kissing_closed_eyes"
+                                                         data-emoji=":kissing_closed_eyes:"></button>
+
+                        </div>
+                        <div class="editor-btns px-2" id="emojis">
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/cry.png' %}" title="cry"
+                                                         alt="emoji-cry" data-emoji=":cry:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/disappointed_relieved.png' %}"
+                                                         title="disappointed_relieved" alt="emoji-disappointed_relieved"
+                                                         data-emoji=":disappointed_relieved:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/dizzy_face.png' %}"
+                                                         title="dizzy_face" alt="emoji-dizzy_face"
+                                                         data-emoji=":dizzy_face:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/dog.png' %}" title="dog"
+                                                         alt="emoji-dog" data-emoji=":dog:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/fearful.png' %}" title="fearful"
+                                                         alt="emoji-fearful" data-emoji=":fearful:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/fist.png' %}" title="fist"
+                                                         alt="emoji-fist" data-emoji=":fist:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/flushed.png' %}" title="flushed"
+                                                         alt="emoji-flushed" data-emoji=":flushed:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/frowning.png' %}" title="frowning"
+                                                         alt="emoji-frowning" data-emoji=":frowning:"></button>
+
+                        </div>
+                        <div class="editor-btns px-2" id="emojis">
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/+1.png' %}" title="+1"
+                                                         alt="emoji-+1" data-emoji=":+1:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/angry.png' %}" title="angry"
+                                                         alt="emoji-angry" data-emoji=":angry:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/anguished.png' %}" title="anguished"
+                                                         alt="emoji-anguished" data-emoji=":anguished:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/blush.png' %}" title="blush"
+                                                         alt="emoji-blush" data-emoji=":blush:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/broken_heart.png' %}"
+                                                         title="broken_heart" alt="emoji-broken_heart"
+                                                         data-emoji=":broken_heart:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/clap.png' %}" title="clap"
+                                                         alt="emoji-clap" data-emoji=":clap:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/cold_sweat.png' %}"
+                                                         title="cold_sweat" alt="emoji-cold_sweat"
+                                                         data-emoji=":cold_sweat:"></button>
+                            <button class="btn p-1"><img src="{% static 'blog/emoji/confounded.png' %}"
+                                                         title="confounded" alt="emoji-confounded"
+                                                         data-emoji=":confounded:"></button>
+
+
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="form-group mb-0">
-                <label for="exampleFormControlTextarea1">Example textarea</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-            </div>
-            <div class="btn-group" role="group" aria-label="First group">
-                <button type="button" class="btn btn-secondary">1</button>
-                <button type="button" class="btn btn-secondary">2</button>
-                <button type="button" class="btn btn-secondary">3</button>
-                <button type="button" class="btn btn-secondary">4</button>
-            </div>
+            <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         </div>
+
         <div class="col-md-4">
             <ul class="nav nav-pills nav-justified mb-3" id="pills-tab" role="tablist">
                 <li class="nav-item">
