--- a/apps/blog/templates/blog/tags/article_list.html
+++ b/apps/blog/templates/blog/tags/article_list.html
@@ -2,7 +2,7 @@
 {% load humanize %}
 <div class="summary-list">
     {% for article in articles %}
-    <div class="media mb-1 mb-sm-2 mb-md-3 p-2 p-lg-3">
+    <div class="media mb-1 mb-sm-2 p-2 p-lg-3">
         <div class="align-self-center mr-2 mr-lg-3 w-25 modal-open">
             <a href="{{ article.get_absolute_url }}" target="_blank">
                 <img class="w-100 article-img" src="{{ article.img_link }}" alt="{{ article.title }}">
@@ -12,7 +12,7 @@
             <div class="text-muted mb-2 f-12">
                 {% get_user_avatar_tag article.author %}
                 <span>{{ article.author }}</span>
-                <span><i class="fa fa-calendar-times-o ml-2 mr-1"></i>{{ article.create_date|naturaltime}}</span>
+                <span><i class="fa fa-calendar-times-o ml-2 mr-1"></i>{{ article.create_date|naturaltime }}</span>
             </div>
             <h2 class="mt-0 font-weight-bold text-info f-17">
                 <a href="{{ article.get_absolute_url }}" target="_blank">{{ article.title}}</a>
