--- a/apps/blog/templates/blog/detail.html
+++ b/apps/blog/templates/blog/detail.html
@@ -10,7 +10,9 @@
 
 
 {% block top-file %}
+{% if user.is_authenticated %}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
+{% endif %}
 <link href="{% static 'blog/css/detail.css' %}?v=20180102.058" rel="stylesheet">
 <link href="{% static 'blog/css/github-colorful.css' %}?v=20180102.130" rel="stylesheet">
 <link href="{% static 'comment/css/base_comment.css' %}?v=20180114.07878" rel="stylesheet">
@@ -100,13 +102,8 @@
 {% endblock %}
 
 {% block end_file %}
+{% if user.is_authenticated %}
 <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
-<script>
-
-</script>
-<script src="{% static 'comment/js/editor.js' %}?v=20180113.000"></script>
-<script>
-$(TOC_FUN('.toc a'));
-
-</script>
+<script src="{% static 'comment/js/editor.js' %}?v=20180113.0002"></script>
+{% endif %}
 {% endblock %}
