--- a/apps/comment/templates/comment/comment_form.html
+++ b/apps/comment/templates/comment/comment_form.html
@@ -1,12 +1,13 @@
 {% load static %}
 <div class="card border-0 rounded-0" id="editor-block">
+    {% if user.is_authenticated %}
     <div class="card-body p-2 p-md-3">
         <textarea class="form-control rounded-0" id="comment-form" name="text"
                   placeholder="评论请使用markdown语法，支持emoji表情语法" rows="5" required></textarea>
     </div>
     <div class="card-footer border-0 bg-white py-0 px-2 px-md-3" id="editor-footer">
         <button type="button" class="btn btn-info btn-sm float-right">提交评论</button>
-        <button id="emoji-btns" type="button" class="btn btn-sm py-1 px-2"
+        <button class="btn btn-sm py-0 px-2" id="emoji-btns" type="button"
                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             <i class="fa fa-smile-o fa-2x"></i>
         </button>
@@ -141,4 +142,9 @@
             </div>
         </div>
     </div>
+    {% else %}
+    <div class="card-body p-2 p-md-3">
+        请登录后评论
+    </div>
+    {% endif %}
 </div>
